spec/conformance/invalid/tab-indentation.ontos
@ontos 1.0
@title Tab indentation example

- Root @id(root)
	purpose: This field is indented with a tab.

